<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.idfocus.nam</groupId>
	<artifactId>nam-parent</artifactId>
	<version>1.0.6</version>
	<packaging>pom</packaging>
	<name>NetIQ Access Manager Extensions from IDFocus</name>
	<description>Authentication modules, policy extensions, filters and more</description>
	<modules>
		<module>nam-util</module>
		<module>nam-authn-password-expiration</module>
		<module>nam-authz-wstrust</module>
		<module>nam-authn-allowdeny</module>
		<module>nam-authn-totp</module>
		<module>nam-authn-smstoken</module>
		<module>nam-authn-totporsmstoken</module>
		<module>nam-authn-idpredirect</module>
		<module>nam-authn-contract-dependency</module>
		<module>nam-authn-chain</module>
		<module>nam-authn-krb-fallback</module>
		<module>nam-authn-u2f</module>
		<module>nam-authn-x509</module>
		<module>nam-playground</module>
		<module>nam-filter-csp</module>
		<module>nam-filter-cors</module>
		<module>nam-filter-locale</module>
		<module>nam-filter-same-site</module>
	</modules>
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${mvn.compiler.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${mvn.javadoc.version}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<failOnError>false</failOnError>
							<doclint>none</doclint>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>external.atlassian.jgitflow</groupId>
				<artifactId>jgitflow-maven-plugin</artifactId>
				<version>${jgitflow.version}</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>				
			</plugin>
		</plugins>
	</build>
	<properties>
		<java.version>1.8</java.version>
		<jgitflow.version>1.0-m5.1</jgitflow.version>
		<mvn.javadoc.version>3.1.1</mvn.javadoc.version>
		<mvn.compiler.version>3.6.1</mvn.compiler.version>
	</properties>
	<scm>
		<connection>scm:git:https://github.com/IDFocus/nam-extensions.git</connection>
		<developerConnection>scm:git:https://github.com/IDFocus/nam-extensions.git</developerConnection>
		<url>https://github.com/IDFocus/nam-extensions</url>
	</scm>
	<distributionManagement>
		<repository>
			<id>nl.idfocus.maven.release</id>
			<name>Nexus Releases</name>
			<url>http://repository.idfocus.nl/repository/maven-releases</url>
			<uniqueVersion>false</uniqueVersion>
		</repository>
		<snapshotRepository>
			<id>nl.idfocus.maven.snapshot</id>
			<name>Nexus Snapshots</name>
			<url>http://repository.idfocus.nl/repository/maven-snapshots/</url>
			<uniqueVersion>true</uniqueVersion>
		</snapshotRepository>
	</distributionManagement>
</project>
